--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,15 @@
-<%= react_component("App", props: { id: 'fFIyKv26', lost_beaver: @lost_beaver, chop_beaver: @chop_beaver }, prerender: false) %>
+
+<div class="outer">
+  <div class="main-beav">
+    <%= image_tag('chop_beaver.png')%>
+    <h2>Hell yeah</h2>
+    <p>
+      A fucking beaver started this app.
+    </p>
+
+    <a class="btn">
+      Signup
+    </a>
+
+  </div>
+</div>
