Testing for Heroku

--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,14 +1,12 @@
 <div class="outer">
   <div class="main-beav">
     <%= image_tag('chop_beaver.png')%>
-    <h2>Hell yeah</h2>
+    <h1>404</h1>
     <p>
-      A fucking beaver started this app.
+      A fucking beaver lead you here....
     </p>
 
-    <a class="btn">
-      Signup
-    </a>
+    <%= link_to 'Home', root_path, class: 'btn' %>
 
   </div>
 </div>
