Added basic styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
       A fucking beaver started this app.
     </p>
 
-    <a class="btn">
-      Signup
-    </a>
+    <%= link_to 'Forms', forms_path, class: 'btn' %>
+
+    <%= link_to 'Surveys', surveys_path, class: 'btn' %>
 
   </div>
 </div>
