--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -571,6 +571,30 @@ textarea:focus, input:focus {
   opacity: 1;
 }
 
-.arrow:hover {
-  /*width: 170px;*/
+@keyframes wave {
+	0%, 60%, 100% { transform: initial }
+	30% { transform: translateY(-8px) }
+}
+
+#wave {
+  position: relative;
+	display: inline-block;
+}
+
+.dot {
+  width: 3px;
+	display: inline-block;
+	height: 3px;
+	border-radius: 50%;
+	margin-right: 3px;
+	background: #fcfcfc;
+	animation: wave 1.3s linear infinite;
+}
+
+.dot:nth-child(2) {
+	animation-delay: -1.1s;
+}
+
+.dot:nth-child(3n) {
+  animation-delay: -0.9s;
 }
