Added fetch library

--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -134,6 +134,7 @@ $input-range-track-disabled-background: $input-range-neutral-light-color !defaul
   width: 100%;
 }
 
+// Common
 
 html, body {
   height: 100%;
