--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,600|Roboto:100,300');
+
 $input-range-font-family: 'Helvetica Neue', san-serif !default;
 $input-range-primary-color: #3f51b5 !default;
 $input-range-neutral-color: #aaaaaa !default;
@@ -141,12 +143,14 @@ html, body {
   padding: 0;
   margin: 0;
   background: #2BBBAD;
+  font-weight: 300;
 }
 
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   color: #fcfcfc;
+  font-weight: 300;
 }
 
 a, a:hover, a:visited, a:focus {
@@ -336,7 +340,7 @@ nav {
 
 nav h2 {
   margin: 0!important;
-  font-weight: 400;
+  font-weight: 300;
   text-transform: uppercase;
 }
 
@@ -537,7 +541,7 @@ textarea:focus, input:focus {
 	left: 0;
 	border: none;
   width: 100px;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1rem;
   letter-spacing: 2px;
   text-transform: uppercase;
