--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -265,6 +265,8 @@ h1, h2, h3, h4, h5, h6 {
 .text {
   opacity: 1;
   font-size: 1.2rem;
+  width: 100%;
+  text-align: center;
 }
 
 .btn.big-btn .text {
