Removed flexbox from buttons

--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -191,14 +191,14 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.1rem;
   margin: 10px 0;
   transition: all 0.35s ease-in-out;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   overflow: hidden;
   position: relative;
   opacity: 1;
   right: 0;
-  text-align: center;
+  text-align: center !important;
 }
 
 .btn.big-btn {
