--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -198,6 +198,10 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   opacity: 1;
   text-align: center !important;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @media screen and (max-height: 700px) {
     font-size: 0.9rem;
     margin: 8px 0;
