--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,600|Roboto:100,300');
-
 $input-range-font-family: 'Helvetica Neue', san-serif !default;
 $input-range-primary-color: #3f51b5 !default;
 $input-range-neutral-color: #aaaaaa !default;
@@ -136,132 +134,41 @@ $input-range-track-disabled-background: $input-range-neutral-light-color !defaul
   width: 100%;
 }
 
-// Common
-
-html, body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  background: #2BBBAD;
-  font-weight: 300;
-  font-size: 18px;
-}
-
-body {
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
-  color: #fcfcfc;
-  font-weight: 300;
-}
-
-a, a:hover, a:visited, a:focus {
-  text-decoration: none;
-}
-
-.outer {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 300;
-  flex-direction: column;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 600;
-}
-
-.step {
-  flex: 11;
-  align-self: center;
-  width: 400px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  @media screen and (max-width: 500px) {
-    width: 330px;
-  }
-}
-
 .btn {
-  font-family: 'Raleway', sans-serif;
-  background: transparent;
-  border: solid 2px #fcfcfc;
-  color: #fcfcfc;
-  min-height: 60px;
-  width: 100%;
-  font-size: 1.1rem;
-  margin: 10px 0;
-  transition: all 0.35s ease-in-out;
-  overflow: hidden;
-  position: relative;
-  opacity: 1;
-  text-align: center !important;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @media screen and (max-height: 700px) {
-    font-size: 0.9rem;
-    margin: 8px 0;
-    min-height: 35px;
+  &.selected {
+    color: #555;
+    background: #fcfcfc;
+    transform: scale(1.03);
+    .zmdi {
+      left: 8px;
+      opacity: 1;
+    }
+    &.done {
+      transform: scale(1);
+      opacity: 0;
+      right: -500px;
+    }
   }
-}
-
-.btn.big-btn {
-  border: none;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-}
-
-.btn.big-btn:hover {
-  background: transparent;
-  color: #fcfcfc;
-}
-
-.btn:hover {
-  color: #555;
-  background: #fcfcfc;
-}
-
-.btn:focus {
-  outline: none!important;
-  box-shadow: 0 0 3pt 2pt rgba(255,255,255,0.6);
-}
-
-.btn.selected {
-  color: #555;
-  background: #fcfcfc;
-  transform: scale(1.03);
-}
-
-.btn.selected.done {
-  transform: scale(1);
-  opacity: 0;
-  right: -500px;
-}
-
-.btn .zmdi {
-  top: 8px;
-  transition: 0.35s ease-in-out;
-  transition-delay: 0.1s;
-  font-size: 2.2rem;
-  opacity: 0;
-  position: absolute;
-  left: -200px;
-  color: #16a085;
-  @media screen and (max-width: 700px) {
-    font-size: 1.2rem;
+  .zmdi {
+    top: 8px;
+    transition: 0.35s ease-in-out;
+    transition-delay: 0.1s;
+    font-size: 2.2rem;
+    opacity: 0;
+    position: absolute;
+    left: -200px;
+    color: #16a085;
+    @media screen and (max-width: 700px) {
+      font-size: 1.2rem;
+    }
   }
-}
-
-.btn.selected .zmdi {
-  left: 8px;
-  opacity: 1;
+  &.finished {
+  	max-height: 3rem;
+    .text {
+      letter-spacing: 4px;
+      text-transform: uppercase;
+    }
+  }
 }
 
 .count {
@@ -275,108 +182,9 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 8px;
 }
 
-.text {
-  opacity: 1;
-  font-size: 1.2rem;
-  width: 100%;
-  text-align: center;
-}
-
-.btn.big-btn .text {
-  transition: 0.35s ease-in-out;
-}
-
-.btn.big-btn .text.muted {
-  opacity: 0.2;
-  font-size: 0.8rem;
-}
-
-.btn.finished {
-	max-height: 3rem;
-}
-
-.btn.finished .text {
-  letter-spacing: 4px;
-  text-transform: uppercase;
-}
-
 .btn.finished:disabled {
   background: transparent;
   color: #fcfcfc;
-}
-
-.options-top {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.options-top h2 {
-  margin: 0;
-}
-
-.options-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex: 3;
-}
-
-.options-footer {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-	flex-direction: column;
-}
-
-.options-footer .btn {
-	display: flex;
-	flex: 2;
-}
-
-.options-footer .options-nav {
-	display: flex;
-	flex: 1;
-	align-self: center;
-}
-
-nav {
-  flex: 1;
-  align-self: stretch;
-  background: #37474F;
-  color: #fcfcfc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-nav h2 {
-  margin: 0!important;
-  font-weight: 300;
-  text-transform: uppercase;
-}
-
-footer {
-  flex: 1;
-  align-self: stretch;
-  background: #2E2E2E;
-  color: #fcfcfc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer span {
-  display: inline-block;
-  font-size: 0.8rem;
-  margin-left: 6px;
-}
-
-footer i {
-  color: #e74c3c;
 }
 
 .options-choices.choose {
@@ -384,15 +192,9 @@ footer i {
   flex-direction: rows;
   justify-content: space-between;
   align-items: center;
-}
-
-.choose .zmdi {
-  font-size: 3rem;
-}
-
-.list-number {
-  position: absolute;
-  left: 10px;
+  .zmdi {
+    font-size: 3rem;
+  }
 }
 
 .finished-text span {
@@ -402,26 +204,15 @@ footer i {
 
 .t-area {
   position: relative;
-}
-
-.t-area textarea {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: transparent;
-  color: transparent;
-  border: none!important;
-}
-
-.t-area input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: transparent;
-  color: transparent;
-  border: none!important;
+  textarea, input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: transparent;
+    color: transparent;
+    border: none!important;
+  }
 }
 
 .t-clone {
@@ -431,7 +222,6 @@ footer i {
   align-items: center;
   text-align: justify;
 }
-
 
 .input-range__track {
   background: #fcfcfc;
@@ -451,144 +241,44 @@ footer i {
   border: 1px solid #2BBBAD;
 }
 
-textarea {
-  resize: none !important;
-}
-
-textarea:focus, input:focus {
-  outline: none!important;
-}
-
-.lost-beaver {
-  height: 400px;
-  width: auto;
-}
-
-.main-beav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 350px;
-}
-
-.main-beav h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 8rem;
-  line-height: 1;
-  margin: 0;
-  margin-top: -2rem;
-}
-
-.main-beav h2 {
-	font-family: 'Montserrat', sans-serif;
-  font-size: 4rem;
-  line-height: 1;
-  margin: 0;
-  margin-top: -0.5rem;
-}
-
-.main-beav p {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 100;
-  opacity: 0.5;
-  font-size: 1.04rem;
-}
-
-.main-beav .login {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-self: flex-end;
-}
-
-.main-beav img {
-  max-height: auto;
-  width: 100%;
-}
-
 @keyframes grow {
 	from { transform: scale(0.8) }
 	to { transform: scale(2.2) }
 }
 
-.nav-dot ul {
-	position: relative;
-	display: inline-block;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-.nav-dot li {
-	position: relative;
-	display: block;
-	float: left;
-	margin: 0 8px;
-	width: 8px;
-	height: 8px;
-}
-
-.nav-dot li span {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	outline: none;
-	border-radius: 50%;
-	background-color: #fcfcfc;
-	background-color: rgba(255, 255, 255, 0.3);
-	text-indent: -999em;
-	position: absolute;
-}
-
-.nav-dot li span {
-	transition: transform 0.3s ease, background-color 0.3s ease;
-}
-
-.nav-dot li.current span {
-	background-color: white;
-	animation: grow 0.35s cubic-bezier(0.680, -0.550, 0.265, 1.550) forwards;
-}
-
-.enter {
-  position: absolute;
-	color: #fcfcfc;
-	left: 0;
-	border: none;
-  width: 100px;
-  font-weight: 300;
-  font-size: 1rem;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  overflow:hidden;
-  background: none;
-  z-index: 1;
-  transition: 0.38s ease-in;
-}
-
-.enter.muted {
-	opacity: 0;
-	font-size: 0.8rem;
-}
-
-.arrow {
-  text-align:left;
-  padding-left:17px;
-}
-
-.arrow:before{
-  content: "Back";
-  position: absolute;
-	top: 0.26rem;
-  left: 0;
-  opacity: 0;
-	font-size: 0.7rem;
-  transition: all 350ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
-}
-
-.arrow:hover:before{
-  left: 2.3rem;
-  opacity: 1;
+.nav-dot {
+  ul {
+  	position: relative;
+  	display: inline-block;
+  	margin: 0;
+  	padding: 0;
+  	list-style: none;
+  }
+  li {
+  	position: relative;
+  	display: block;
+  	float: left;
+  	margin: 0 8px;
+  	width: 8px;
+  	height: 8px;
+    span {
+    	top: 0;
+    	left: 0;
+    	width: 100%;
+    	height: 100%;
+    	outline: none;
+    	border-radius: 50%;
+    	background-color: #fcfcfc;
+    	background-color: rgba(255, 255, 255, 0.3);
+    	text-indent: -999em;
+    	position: absolute;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+    }
+    &.current span {
+      background-color: white;
+    	animation: grow 0.35s cubic-bezier(0.680, -0.550, 0.265, 1.550) forwards;
+    }
+  }
 }
 
 @keyframes wave {
@@ -609,12 +299,10 @@ textarea:focus, input:focus {
 	margin-right: 3px;
 	background: #fcfcfc;
 	animation: wave 1.3s linear infinite;
-}
-
-.dot:nth-child(2) {
-	animation-delay: -1.1s;
-}
-
-.dot:nth-child(3n) {
-  animation-delay: -0.9s;
+  &:nth-child(2) {
+  	animation-delay: -1.1s;
+  }
+  &:nth-child(3n) {
+    animation-delay: -0.9s;
+  }
 }
