--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ReactOnRails</title>
     <%= csrf_meta_tags %>
-    <!-- <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %> -->
-    <!-- <%= stylesheet_link_tag "application", :media => "all" %> -->
+    <%= stylesheet_link_tag "application", :media => "all" %>
     <%= stylesheet_link_tag params[:controller] %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.css">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
