Not sure what I am adding here

--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -306,3 +306,8 @@ $input-range-track-disabled-background: $input-range-neutral-light-color !defaul
     animation-delay: -0.9s;
   }
 }
+
+.list-number {
+  position: absolute;
+  left: 10px;		
+}
